feat(title): add search functionality with type filtering